force-app/main/default/objects/Master_Possession__c/Master_Possession__c.object-meta.xml
<CustomObject>
    <label>Master Possession</label>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Master Possession Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Possessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>