force-app/main/default/objects/Master_Possession__c/fields/Section_Number__c.field-meta.xml
<CustomField>
    <fullName>Section_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Section Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>