force-app/main/default/objects/Master_Possession__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Master Possessions</relationshipLabel>
    <relationshipName>Master_Possessions</relationshipName>
    <type>Lookup</type>
</CustomField>